.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
12:37:50 **** Incremental Build of configuration Debug for project DMA_UART ****
make -j2 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/stm32f4xx_it.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/stm32f4xx_it.d" -MT"Core/Src/stm32f4xx_it.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/stm32f4xx_it.o"
arm-none-eabi-gcc "../Core/Src/syscalls.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/syscalls.d" -MT"Core/Src/syscalls.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/syscalls.o"
arm-none-eabi-gcc "../Core/Src/sysmem.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/sysmem.d" -MT"Core/Src/sysmem.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/sysmem.o"
arm-none-eabi-gcc "../Core/Src/system_stm32f4xx.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/system_stm32f4xx.d" -MT"Core/Src/system_stm32f4xx.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/system_stm32f4xx.o"
arm-none-eabi-gcc -o "DMA_UART.elf" @"objects.list"   -mcpu=cortex-m4 -T"/home/faoziaziz/STM32CubeIDE/workspace_1.6.0/DMA_UART/STM32F446RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="DMA_UART.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: DMA_UART.elf
 
arm-none-eabi-size   DMA_UART.elf 
arm-none-eabi-objdump -h -S  DMA_UART.elf  > "DMA_UART.list"
   text	   data	    bss	    dec	    hex	filename
  10728	     20	   1732	  12480	   30c0	DMA_UART.elf
Finished building: default.size.stdout
 
arm-none-eabi-objcopy  -O binary  DMA_UART.elf  "DMA_UART.bin"
Finished building: DMA_UART.bin
 
Finished building: DMA_UART.list
 
12:38:35 **** Incremental Build of configuration Debug for project DMA_UART ****
make -j2 all 
arm-none-eabi-size   DMA_UART.elf 
   text	   data	    bss	    dec	    hex	filename
  10728	     20	   1732	  12480	   30c0	DMA_UART.elf
Finished building: default.size.stdout
 
12:39:10 **** Incremental Build of configuration Debug for project DMA_UART ****
make -j2 all 
arm-none-eabi-size   DMA_UART.elf 
   text	   data	    bss	    dec	    hex	filename
  10728	     20	   1732	  12480	   30c0	DMA_UART.elf
Finished building: default.size.stdout
 
12:46:06 **** Incremental Build of configuration Debug for project DMA_UART ****
make -j2 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "DMA_UART.elf" @"objects.list"   -mcpu=cortex-m4 -T"/home/faoziaziz/STM32CubeIDE/workspace_1.6.0/DMA_UART/STM32F446RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="DMA_UART.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: DMA_UART.elf
 
arm-none-eabi-objdump -h -S  DMA_UART.elf  > "DMA_UART.list"
arm-none-eabi-objcopy  -O binary  DMA_UART.elf  "DMA_UART.bin"
Finished building: DMA_UART.bin
 
arm-none-eabi-size   DMA_UART.elf 
   text	   data	    bss	    dec	    hex	filename
  10728	     20	   1732	  12480	   30c0	DMA_UART.elf
Finished building: default.size.stdout
 
Finished building: DMA_UART.list
 
12:46:33 **** Incremental Build of configuration Debug for project DMA_UART ****
make -j2 all 
arm-none-eabi-size   DMA_UART.elf 
   text	   data	    bss	    dec	    hex	filename
  10728	     20	   1732	  12480	   30c0	DMA_UART.elf
Finished building: default.size.stdout
 
13:47:30 **** Incremental Build of configuration Debug for project DMA_UART ****
make -j2 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'HAL_UART_RxCpltCallback':
../Core/Src/main.c:241:62: error: expected ';' before '}' token
  241 |  HAL_UART_Transmit(&huart2, (uint8_t*)DEST_ADDRESS, 12, 1000)
      |                                                              ^
      |                                                              ;
  242 | }
      | ~                                                             
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j2 all" terminated with exit code 2. Build might be incomplete.
13:48:30 **** Incremental Build of configuration Debug for project DMA_UART ****
make -j2 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "DMA_UART.elf" @"objects.list"   -mcpu=cortex-m4 -T"/home/faoziaziz/STM32CubeIDE/workspace_1.6.0/DMA_UART/STM32F446RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="DMA_UART.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: DMA_UART.elf
 
arm-none-eabi-objdump -h -S  DMA_UART.elf  > "DMA_UART.list"
arm-none-eabi-objcopy  -O binary  DMA_UART.elf  "DMA_UART.bin"
Finished building: DMA_UART.bin
 
arm-none-eabi-size   DMA_UART.elf 
   text	   data	    bss	    dec	    hex	filename
  11188	     20	   1732	  12940	   328c	DMA_UART.elf
Finished building: default.size.stdout
 
Finished building: DMA_UART.list
 
13:55:01 **** Clean-only build of configuration Debug for project DMA_UART ****
make -j2 clean 
rm -rf *
 
13:55:02 **** Clean-only build of configuration Debug for project LED_toggle_IT ****
make -j2 clean 
make: *** No rule to make target 'clean'.  Stop.
"make -j2 clean" terminated with exit code 2. Build might be incomplete.
13:55:03 **** Clean-only build of configuration Debug for project Led_toggle_DMA ****
make -j2 clean 
make: *** No rule to make target 'clean'.  Stop.
"make -j2 clean" terminated with exit code 2. Build might be incomplete.
13:55:04 **** Clean-only build of configuration Debug for project Test2 ****
make -j2 clean 
make: *** No rule to make target 'clean'.  Stop.
"make -j2 clean" terminated with exit code 2. Build might be incomplete.
13:55:05 **** Clean-only build of configuration Debug for project test3 ****
make -j2 clean 
make: *** No rule to make target 'clean'.  Stop.
"make -j2 clean" terminated with exit code 2. Build might be incomplete.
13:55:05 **** Clean-only build of configuration Debug for project test4 ****
make -j2 clean 
make: *** No rule to make target 'clean'.  Stop.
"make -j2 clean" terminated with exit code 2. Build might be incomplete.
